website/versioned_docs/version-2.1.x/docs/python/goals/typecheck.mdx
---
    title: typecheck
    position: 6
---

How to use MyPy.

---

[block:api-header]
{
  "title": "Activating MyPy"
}
[/block]
To opt-in, add `pants.backend.python.typecheck.mypy` to `backend_packages` in your config file. 
[block:code]
{
  "codes": [
    {
      "code": "[GLOBAL]\nbackend_packages.add = [\n  \"pants.backend.python\",\n  \"pants.backend.python.typecheck.mypy\",\n]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
This will register a new `typecheck` goal:

```bash
$ ./pants typecheck helloworld/util/lang.py
$ ./pants typecheck ::
```
[block:callout]
{
  "type": "success",
  "body": "MyPy determines which Python version to use based on its `python_version` option. If that's undefined, MyPy uses the interpreter the tool is run with. Because you can only use one config file at a time with MyPy, you cannot normally say to use `2.7` for part of your codebase but `3.6` for the rest; you must choose a single version.\n\nInstead, Pants will group your targets based on their [interpreter constraints](doc:python-interpreter-compatibility), and run all the Python 2 targets together and all the Python 3 targets together. It will automatically set `python_version` to the minimum compatible interpreter, such as a constraint like `[\"==2.7.*\", \">3.6\"]` using `2.7`.\n\nTo turn this off, you can still set `python_version` in `mypy.ini` or `--python-version`/`--py2` in `--mypy-args`; Pants will respect the value you set.",
  "title": "Benefit of Pants: typecheck Python 2-only and Python 3-only code at the same time"
}
[/block]
### Hook up a MyPy config file

Set the `config` option in the `[mypy]` scope:
[block:code]
{
  "codes": [
    {
      "code": "[mypy]\nconfig = \"build-support/mypy.ini\"",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
### Change the MyPy version

Use the `version` option in the `[mypy]` scope:
[block:code]
{
  "codes": [
    {
      "code": "[mypy]\nversion = \"mypy==0.782\"",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
### Type stubs (`.pyi` files)

You can use [`.pyi` files](https://mypy.readthedocs.io/en/stable/stubs.html) for both first-party and third-party code. Include the `.pyi` files in the `sources` field for `python_library` and `python_tests` targets. MyPy will use these stubs rather than looking at the implementation.

Pants's dependency inference knows to infer a dependency both on the implementation and the type stub. You can verify this by running `./pants dependencies path/to/file.py`.

When writing stubs for third-party libraries, you may need the set up the `[source].root_patterns` option so that [source roots](doc:source-roots) are properly stripped. For example:
[block:code]
{
  "codes": [
    {
      "code": "[source]\nroot_patterns = [\"mypy-stubs\", \"src/python\"]",
      "language": "toml",
      "name": "pants.toml"
    },
    {
      "code": "# Because we set `mypy-stubs` as a source root, this file will be \n# stripped to be simply `colors.pyi`. MyPy will look at this file for\n# imports of the `colors` module.\n\ndef red(s: str) -> str: ...",
      "language": "python",
      "name": "mypy-stubs/colors.pyi"
    },
    {
      "code": "python_library()",
      "language": "text",
      "name": "mypy-stubs/BUILD"
    },
    {
      "code": "from colors import red\n\nif __name__ == \"__main__\":\n    print(red(\"I'm red!\"))",
      "language": "python",
      "name": "src/python/project/app.py"
    },
    {
      "code": "# Pants will infer a dependency both on the `ansicolors` requirement\n# and our type stub.\npex_binary(sources=[\"app.py\"])",
      "language": "python",
      "name": "src/python/project/BUILD"
    }
  ]
}
[/block]
### Add a third-party plugin

Add the plugin to the `extra_requirements` option in the `[mypy]` scope, then update your `mypy.ini` to load the plugin:
[block:code]
{
  "codes": [
    {
      "code": "[mypy]\nextra_requirements = [\"pydantic==1.6.1\"]",
      "language": "toml",
      "name": "pants.toml"
    },
    {
      "code": "[mypy]\nplugins =\n    pydantic.mypy",
      "language": "text",
      "name": "mypy.ini"
    }
  ]
}
[/block]
For some plugins, like `django-stubs`, you may need to always load certain source files, such as a `settings.py` file. You can make sure that this source file is always used by hijacking the `source_plugins` option, which allows you to specify targets whose `sources` should always be used when running MyPy. See the below section for more information about source plugins.

For example, to fully use the `django-stubs` plugin, your setup might look like this:
[block:code]
{
  "codes": [
    {
      "code": "[source]\nroot_patterns = [\"src/python\"]\n\n[mypy]\nextra_requirements = [\"django-stubs==1.5.0\"]\nsource_plugins = [\"src/python/project:django_settings\"]",
      "language": "toml",
      "name": "pants.toml"
    },
    {
      "code": "[mypy]\nplugins =\n    mypy_django_plugin.main\n\n[mypy.plugins.django-stubs]\ndjango_settings_module = project.django_settings",
      "language": "text",
      "name": "mypy.ini"
    },
    {
      "code": "from django.urls import URLPattern\n\nDEBUG = True\nDEFAULT_FROM_EMAIL = \"webmaster@example.com\"\nSECRET_KEY = \"not so secret\"\nMY_SETTING = URLPattern(pattern=\"foo\", callback=lambda: None)",
      "language": "python",
      "name": "src/python/project/django_settings.py"
    },
    {
      "code": "mypy_source_plugin(\n    name=\"django-settings\",\n    sources=[\"django_settings.py\"],\n)",
      "language": "python",
      "name": "src/python/project/BUILD"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "MyPy Protobuf support",
  "body": "Add `mypy_plugin = true` to the `[python-protobuf]` scope. See [Protobuf](doc:protobuf) for more information."
}
[/block]
### Add a first-party plugin

To add a [MyPy plugin](https://mypy.readthedocs.io/en/stable/extending_mypy.html) you wrote, define a `mypy_source_plugin` target with the plugin's Python file(s) included in the `sources` field.

Then, add `plugins = path.to.module` to your MyPy config file, using the name of the module without source roots. For example, if your Python file is called `pants-plugins/mypy_plugins/custom_plugin.py`, and you set `pants-plugins` as a source root, then set `plugins = mypy_plugins.custom_plugin`. Set the `config` option in the `[mypy]` scope in your `pants.toml` to point to your MyPy config file.

Finally, set the option `source_plugins` in the `[mypy]` scope to include this target's address, e.g. `source_plugins = ["pants-plugins/mypy_plugins:plugin"]`. This will ensure that your plugin's sources are always included in the subprocess.

For example:
[block:code]
{
  "codes": [
    {
      "code": "[mypy]\nconfig = \"mypy.ini\"\nsource_plugins = [\"pants-plugins/mypy_plugins:plugin\"]",
      "language": "toml",
      "name": "pants.toml"
    },
    {
      "code": "plugins =\n    mypy_plugins.change_return_type",
      "language": "text",
      "name": "mypy.ini"
    },
    {
      "code": "mypy_source_plugin(\n    name=\"plugin\",\n    sources=[\"change_return_type.py\"],\n)",
      "language": "python",
      "name": "pants-plugins/mypy_plugins/BUILD"
    },
    {
      "code": "\"\"\"A contrived plugin that changes the return type of any \nfunction ending in `__overriden_by_plugin` to return None.\"\"\"\n\nfrom typing import Callable, Optional, Type\n\nfrom mypy.plugin import FunctionContext, Plugin\nfrom mypy.types import NoneType, Type as MyPyType\n\nfrom plugins.subdir.dep import is_overridable_function\n\nclass ChangeReturnTypePlugin(Plugin):\n    def get_function_hook(\n        self, fullname: str\n    ) -> Optional[Callable[[FunctionContext], MyPyType]]:\n        return hook if name.endswith(\"__overridden_by_plugin\") else None\n\n\ndef hook(ctx: FunctionContext) -> MyPyType:\n    return NoneType()\n\n\ndef plugin(_version: str) -> Type[Plugin]:\n    return ChangeReturnTypePlugin",
      "language": "python",
      "name": "pants-plugins/mypy_plugins/change_return_type.py"
    }
  ]
}
[/block]
A `mypy_source_plugin` target is treated similarly to a `python_library` target. For example, Python linters and formatters will run on the target.

You can depend on other targets and Pants's dependency inference will add them to the `dependencies` field, including any third-party requirements and `python_library` targets (even if their source files live in a different directory).

Other targets can depend on a `mypy_source_plugin` target. This allows you to write a `python_tests` target for this code or a `python_distribution` target to distribute the plugin externally.
[block:api-header]
{
  "title": "Known limitations"
}
[/block]
### Performance may be slower than normal

Pants does not yet leverage MyPy's caching mechanism and daemon, so a typical run with Pants will likely be slower than using MyPy directly.

We are [working to figure out](https://github.com/pantsbuild/pants/issues/10864) how to leverage MyPy's cache in a way that is safe and allows for things like remote execution.

### Namespace packages

Pants's MyPy implementation will likely not work if you use namespace packages, either via [PEP 420](https://www.python.org/dev/peps/pep-0420/) or the older `pkg_resources` approach, even if you use MyPy's `--namespace-packages` option.

Further, we've internally had issues with setting `--namespace-packages` causing MyPy to complain about some third-party dependencies, which appears to be a MyPy bug.

Please reach out on [Slack](doc:community) if you need support for namespace packages. We had difficulty getting MyPy to work with namespace packages independently of Pants, and it would help us to understand your use case.
[block:api-header]
{
  "title": "Tip: only run over changed files and their dependees"
}
[/block]
When changing type hints code, you not only need to run over the changed files, but also any code that depends on the changed files:

```bash
$ ./pants --changed-since=HEAD --changed-dependees=transitive typecheck
```

See [Advanced target selection](doc:advanced-target-selection) for more information.